test_regress/t/t_func_tasknsvar_bad.out
%Error-TASKNSVAR: t/t_func_tasknsvar_bad.v:16:29: Unsupported: Function/task input argument is not simple variable
   16 |       foo(bus_we_select_from[2]);   
      |                             ^
                  ... For error description see https://verilator.org/warn/TASKNSVAR?v=latest
%Error: Internal Error: t/t_func_tasknsvar_bad.v:10:7: ../V3Broken.cpp:#: Broken link in node (or something without maybePointedTo): 'm_varp && !m_varp->brokeExists()' @ ../V3AstNodes.cpp:64
   10 |       sig = '1;
      |       ^~~
                        ... See the manual at https://verilator.org/verilator_doc.html for more assistance.
